Background's css done. All left is main content

--- a/Tugas1_535230052_Joshua Atmadjaya/index.html
+++ b/Tugas1_535230052_Joshua Atmadjaya/index.html
@@ -1,38 +1,42 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<div class = BackgroundImage>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Homework</title>
+    <title>MakotoMachiYuki CV</title>
     <link rel = "stylesheet" href = "style.css">
+    <link rel = "icon" type = "images/png" sizes = "16x16" href = "images/favicon/favicon-16x16.png">
+    <link rel = "icon" type = "images/png" sizes = "32x32" href = "images/favicon/favicon-32x32.png">
+    <link rel = "apple-touch-icon" sizes = "180x180" href = "images/favicon/apple-touch-icon.png">
+    <link rel = "shortcut icon" types = "images/x-icon" href = "images/favicon/favicon.ico">
     <script src = "script.js" defer> </script>
 </head>
 <body>
-<div class = "blur-backdrop">
-    <div class = header>
-
+    <div id = "backgroundContainer"> 
+        <img src = "images/background/background.jpg" id = "background">
     </div>
-    <div class = "content">    
-        <div class = container1>
-            <div class = "profile">
-                <div class = "profilePictureContainer">
-                    <img src = "BB_deadeyes.jpg" class = "profilePicture">
+
+    <div id = "content">    
+        <div class = "container1">
+            <div class = "profileContainer">
+                <div class = "profilePictureContainer" id = "profile">
+                    <img src = "/images/background/BB_deadeyes.jpg" class = "profilePicture">
                 </div>
-                    <div class = "name1">
-                        Joshua Atmadjaya
-                    </div>    
-                    <div class = "name2">
-                        MakotoMachiYuki
-                    </div>
+                <div class = "name1" id = "profile">
+                    MakotoMachiYuki
+                </div>
+
+                <div class = "name2" id = "profile">
+                    Joshua Atmadjaya
+                </div>    
             </div>      
         </div>
-    </div>
 
-    <div class = footer>
+        <div class = "text">
+            About MakotoMachiYuki
+        </div>
+
         
     </div>
-</div>
 </body>
-</div>
 </html>
