Addition images and javascript code

--- a/Tugas1_535230052_Joshua Atmadjaya/index.html
+++ b/Tugas1_535230052_Joshua Atmadjaya/index.html
@@ -1,42 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MakotoMachiYuki CV</title>
-    <link rel = "stylesheet" href = "style.css">
-    <link rel = "icon" type = "images/png" sizes = "16x16" href = "images/favicon/favicon-16x16.png">
-    <link rel = "icon" type = "images/png" sizes = "32x32" href = "images/favicon/favicon-32x32.png">
-    <link rel = "apple-touch-icon" sizes = "180x180" href = "images/favicon/apple-touch-icon.png">
-    <link rel = "shortcut icon" types = "images/x-icon" href = "images/favicon/favicon.ico">
-    <script src = "script.js" defer> </script>
-</head>
-<body>
-    <div id = "backgroundContainer"> 
-        <img src = "images/background/background.jpg" id = "background">
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/8724a9ccea.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <link
+      rel="icon"
+      type="images/png"
+      sizes="16x16"
+      href="images/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="images/png"
+      sizes="32x32"
+      href="images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="shortcut icon"
+      types="images/x-icon"
+      href="images/favicon/favicon.ico"
+    />
+  </head>
+  <body>
+    <div id="backgroundContainer">
+      <img src="images/background/background.jpg" id="background" />
+      <img src="images/background/background.jpg" id="backgroundNoBlur" />
     </div>
 
-    <div id = "content">    
-        <div class = "container1">
-            <div class = "profileContainer">
-                <div class = "profilePictureContainer" id = "profile">
-                    <img src = "/images/background/BB_deadeyes.jpg" class = "profilePicture">
-                </div>
-                <div class = "name1" id = "profile">
-                    MakotoMachiYuki
-                </div>
+    <div id="content">
+      <div class="container1">
+        <div class="profileContainer">
+          <div class="profile" id="name1">MakotoMachiYuki</div>
+          <div class="profile" id="profilePictureContainer">
+            <img src="/images/background/BB_deadeyes.jpg" id="profilePicture" />
+          </div>
+          <div class="profile" id="name2">Joshua Atmadjaya</div>
+        </div>
+      </div>
+      <div class="icons">
+        <a href="https://github.com/MakotoMachiYuki" target="_blank"
+          ><i class="fa-brands fa-github" id="github"></i
+        ></a>
+        <a
+          href="https://www.youtube.com/@joshua_atmadjaya_college"
+          target="_blank"
+          ><i class="fa-brands fa-youtube" id="youtube"></i
+        ></a>
+        <a href="https://x.com/atmadjaya52" target="_blank"
+          ><i class="fa-brands fa-twitter" id="twitter"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/joshuaatmadjaya?igsh=MXczZXFvN3AzazRnMw=="
+          target="_blank"
+          ><i class="fa-brands fa-instagram" id="instagram"></i
+        ></a>
+      </div>
 
-                <div class = "name2" id = "profile">
-                    Joshua Atmadjaya
-                </div>    
-            </div>      
+      <div class="about">
+        <div class="text" id="aboutUsername">
+          About
+          <div class="username">MakotoMachiYuki</div>
         </div>
 
-        <div class = "text">
-            About MakotoMachiYuki
+        <div class="description">
+          I'm Joshua Atmadjaya who's known as MakotoMachiYuki
         </div>
 
-        
+        <div class="logo">
+          <img src="images/logo/progammer.png" id="programmerlogo" />
+        </div>
+      </div>
+
+      <div class="text">Education</div>
+
+      <div class="description">Tarumanegara Universitas S1</div>
+
+      <div class="text">Programming Languages</div>
+
+      <div class="logoGroupDiv" id="logoGroupDiv1">
+        <img src="/images/logo/c++.png" class="logoGroup" />
+        <img src="/images/logo/Java.png" class="logoGroup" />
+        <img src="/images/logo/Python.png" class="logoGroup" />
+      </div>
+
+      <div class="text">Frameworks</div>
+
+      <div class="logoGroupDiv" id="logoGroupDiv2">
+        <img src="/images/logo/Node.js.png" class="logoGroup" />
+        <img src="/images/logo/Laravel.png" class="logoGroup" />
+        <img src="/images/logo/FlutterTransparent.png" class="logoGroup" />
+      </div>
+
+      <div class="text">Operating Systems</div>
+
+      <div class="logoGroupDiv" id="logoGroupDiv3">
+        <img src="/images/logo/WindowsLogoShadow.png" class="logoGroup" />
+        <img src="/images/logo/ArchLinux.png" class="logoGroup" />
+        <img src="/images/logo/Ubuntu.png" class="logoGroup" />
+      </div>
+
+      <div class="text">Project</div>
+
+      <div class="text" id="assets1">
+        Assets' Sources <i class="fa-solid fa-caret-down" id="caret1"></i>
+      </div>
+      <div class="text" id="assets2">
+        Assets' Sources <i class="fa-solid fa-caret-up" id="caret2"></i>
+      </div>
+
+      <div id="sources">
+        Background's artist:
+        <a href="https://x.com/katorei_" target="_blank"
+          >かとうれい rei kato
+        </a>
+        <br />
+        Logo:
+        <a href="https://x.com/sawaratsuki1004" target="_blank"
+          >さわらつき SAWARATSUKI</a
+        >
+        <br />
+        Windows' logo:
+        <a href="https://github.com/Shiroiame-Kusu" target="_blank"
+          >Shiroame Kusu</a
+        >
+      </div>
+
+      <div class="text">Contact</div>
+      <div id="contact">
+        <i class="fa-brands fa-discord" id="discord"></i> Discord:
+        @MakotoMachiYuki&nbsp;•&nbsp;<i
+          class="fa-solid fa-envelope"
+          id="mail"
+        ></i>
+        E-mail: joshua.535230052@stu.untar.ac.id
+      </div>
+      <div id="placeholder">(c) Joshua Atmadjaya "MakotoMachiYuki"</div>
+
+      <div id="showBackground"><a>show background</a></div>
     </div>
-</body>
+  </body>
 </html>
