--- a/Tugas1_535230052_Joshua Atmadjaya/index.html
+++ b/Tugas1_535230052_Joshua Atmadjaya/index.html
@@ -45,7 +45,7 @@
         <div class="profileContainer">
           <div class="profile" id="name1">MakotoMachiYuki</div>
           <div class="profile" id="profilePictureContainer">
-            <img src="/images/background/BB_deadeyes.jpg" id="profilePicture" />
+            <img src="/images/background/Xufu.png" id="profilePicture" />
           </div>
           <div class="profile" id="name2">Joshua Atmadjaya</div>
         </div>
@@ -76,28 +76,45 @@
         </div>
 
         <div class="description">
-          I'm Joshua Atmadjaya who's known as MakotoMachiYuki
+          I'm Joshua Atmadjaya aka MakotoMachiYuki, a college student developer
+          who love to code, anime, manga, games, music and more! <br />
+          <br />
+          I'm expertise in
+          <b>adaptation</b>
+          , meaning my skill is to adapt to any situation at given moment. I
+          loved learning every new stuffs I found everyday especially in coding
+          expertise specifically in
+          <b>Cyber Security</b>
+          news.
         </div>
 
-        <div class="logo">
+        <div class="logo" id="programmerContainer">
           <img src="images/logo/progammer.png" id="programmerlogo" />
         </div>
       </div>
 
       <div class="text">Education</div>
 
-      <div class="description">Tarumanegara Universitas S1</div>
+      <div class="description">
+        Tarumanegara University S1 <br />
+        Currenly enrolling in Untar College as Computer Science student!
+      </div>
 
       <div class="text">Programming Languages</div>
+      <div class="description">I'm main in both C++ and Java languages!</div>
 
       <div class="logoGroupDiv" id="logoGroupDiv1">
         <img src="/images/logo/c++.png" class="logoGroup" />
         <img src="/images/logo/Java.png" class="logoGroup" />
         <img src="/images/logo/Python.png" class="logoGroup" />
+        <img src="/images/logo/HTML.png" class="logoGroup" />
+        <img src="images/logo/css.png" class="logoGroup" />
       </div>
 
       <div class="text">Frameworks</div>
-
+      <div class="description">
+        These three are my most familar frameworks to work with!
+      </div>
       <div class="logoGroupDiv" id="logoGroupDiv2">
         <img src="/images/logo/Node.js.png" class="logoGroup" />
         <img src="/images/logo/Laravel.png" class="logoGroup" />
@@ -105,14 +122,73 @@
       </div>
 
       <div class="text">Operating Systems</div>
-
+      <div class="description">
+        I'm pretty familiar on Arch Linux Distro!<br />
+        <i>"I used arch by the way"</i>
+      </div>
       <div class="logoGroupDiv" id="logoGroupDiv3">
         <img src="/images/logo/WindowsLogoShadow.png" class="logoGroup" />
         <img src="/images/logo/ArchLinux.png" class="logoGroup" />
         <img src="/images/logo/Ubuntu.png" class="logoGroup" />
       </div>
 
-      <div class="text">Project</div>
+      <div class="text" id="ide">
+        (IDE) Integrated Development Environment Software
+      </div>
+      <div class="description">
+        My main IDE is Visual Studio Code but I can also use VIM as well!
+      </div>
+      <div class="logoGroupDiv" id="logoGroupDiv4">
+        <img src="/images/logo/VisualStudioCode.png" class="logoGroup" />
+        <img src="/images/logo/VIM.png" class="logoGroup" />
+      </div>
+
+      <div class="text">Projects</div>
+      <div id="projectSources">
+        <li>
+          <a
+            href="https://github.com/MakotoMachiYuki/BackEnd-Final-Kel2"
+            target="_blank"
+            >Social Media Web</a
+          >
+          with Laravel frameworks. A School's project I did with my friend to
+          make a working social media web browser with php languages and postgre
+          database inside laravel frameworks
+        </li>
+        <li>
+          <a
+            href="https://github.com/MakotoMachiYuki/SimpleDecisionTree"
+            target="_blank"
+            >Decision Tree</a
+          >
+          with Java language which provide user with a bunch of questions in
+          order to navigate inside the decision tree until last leaf node.
+        </li>
+        <li>
+          <a
+            href="https://github.com/MakotoMachiYuki/Back.End.Programing.Project.API.Mid.Test"
+            target="_blank"
+            >Simple Node JS API</a
+          >
+          with Javascript language which provide api with login logout,
+          pagination, change password, password attempt limit and simple banking
+          transaction api.
+        </li>
+        <li>
+          <a href="https://github.com/MakotoMachiYuki/OPRockPaperScissors"
+            >Rock paper scissors</a
+          >
+          and
+          <a href="https://github.com/MakotoMachiYuki/OPEtch-a-Sktech"
+            >Etch a Sketch</a
+          >
+          websites with
+          <a href="https://www.theodinproject.com/">Odin Project </a> to learn
+          website development.
+        </li>
+      </div>
+
+      <div class="paddingDiv"></div>
 
       <div class="text" id="assets1">
         Assets' Sources <i class="fa-solid fa-caret-down" id="caret1"></i>
@@ -122,21 +198,29 @@
       </div>
 
       <div id="sources">
-        Background's artist:
-        <a href="https://x.com/katorei_" target="_blank"
-          >かとうれい rei kato
-        </a>
-        <br />
-        Logo:
-        <a href="https://x.com/sawaratsuki1004" target="_blank"
-          >さわらつき SAWARATSUKI</a
-        >
-        <br />
-        Windows' logo:
-        <a href="https://github.com/Shiroiame-Kusu" target="_blank"
-          >Shiroame Kusu</a
-        >
+        <div class="description">
+          Credits and thanks to these wonderful artists:
+        </div>
+        <li>
+          Background's artist:
+          <a href="https://x.com/katorei_" target="_blank"
+            >かとうれい rei kato
+          </a>
+        </li>
+        <li>
+          Logo:
+          <a href="https://x.com/sawaratsuki1004" target="_blank"
+            >さわらつき SAWARATSUKI</a
+          >
+        </li>
+        <li>
+          Windows' logo:
+          <a href="https://github.com/Shiroiame-Kusu" target="_blank"
+            >Shiroame Kusu</a
+          >
+        </li>
       </div>
+      <div class="paddingDiv"></div>
 
       <div class="text">Contact</div>
       <div id="contact">
@@ -147,8 +231,8 @@
         ></i>
         E-mail: joshua.535230052@stu.untar.ac.id
       </div>
+      <div id="umbrella">☔</div>
       <div id="placeholder">(c) Joshua Atmadjaya "MakotoMachiYuki"</div>
-
       <div id="showBackground"><a>show background</a></div>
     </div>
   </body>
