Image slash fix

--- a/Tugas1_535230052_Joshua Atmadjaya/index.html
+++ b/Tugas1_535230052_Joshua Atmadjaya/index.html
@@ -45,7 +45,7 @@
         <div class="profileContainer">
           <div class="profile" id="name1">MakotoMachiYuki</div>
           <div class="profile" id="profilePictureContainer">
-            <img src="/images/background/Xufu.png" id="profilePicture" />
+            <img src="images/background/Xufu.png" id="profilePicture" />
           </div>
           <div class="profile" id="name2">Joshua Atmadjaya</div>
         </div>
@@ -104,10 +104,10 @@
       <div class="description">I'm main in both C++ and Java languages!</div>
 
       <div class="logoGroupDiv" id="logoGroupDiv1">
-        <img src="/images/logo/c++.png" class="logoGroup" />
-        <img src="/images/logo/Java.png" class="logoGroup" />
-        <img src="/images/logo/Python.png" class="logoGroup" />
-        <img src="/images/logo/HTML.png" class="logoGroup" />
+        <img src="images/logo/c++.png" class="logoGroup" />
+        <img src="images/logo/Java.png" class="logoGroup" />
+        <img src="images/logo/Python.png" class="logoGroup" />
+        <img src="images/logo/HTML.png" class="logoGroup" />
         <img src="images/logo/css.png" class="logoGroup" />
       </div>
 
@@ -116,9 +116,9 @@
         These three are my most familar frameworks to work with!
       </div>
       <div class="logoGroupDiv" id="logoGroupDiv2">
-        <img src="/images/logo/Node.js.png" class="logoGroup" />
-        <img src="/images/logo/Laravel.png" class="logoGroup" />
-        <img src="/images/logo/FlutterTransparent.png" class="logoGroup" />
+        <img src="images/logo/Node.js.png" class="logoGroup" />
+        <img src="images/logo/Laravel.png" class="logoGroup" />
+        <img src="images/logo/FlutterTransparent.png" class="logoGroup" />
       </div>
 
       <div class="text">Operating Systems</div>
@@ -127,9 +127,9 @@
         <i>"I used arch by the way"</i>
       </div>
       <div class="logoGroupDiv" id="logoGroupDiv3">
-        <img src="/images/logo/WindowsLogoShadow.png" class="logoGroup" />
-        <img src="/images/logo/ArchLinux.png" class="logoGroup" />
-        <img src="/images/logo/Ubuntu.png" class="logoGroup" />
+        <img src="images/logo/WindowsLogoShadow.png" class="logoGroup" />
+        <img src="images/logo/ArchLinux.png" class="logoGroup" />
+        <img src="images/logo/Ubuntu.png" class="logoGroup" />
       </div>
 
       <div class="text" id="ide">
@@ -139,8 +139,8 @@
         My main IDE is Visual Studio Code but I can also use VIM as well!
       </div>
       <div class="logoGroupDiv" id="logoGroupDiv4">
-        <img src="/images/logo/VisualStudioCode.png" class="logoGroup" />
-        <img src="/images/logo/VIM.png" class="logoGroup" />
+        <img src="images/logo/VisualStudioCode.png" class="logoGroup" />
+        <img src="images/logo/VIM.png" class="logoGroup" />
       </div>
 
       <div class="text">Projects</div>
